--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   
 
-<center><h1 class="unicorn">am cookie and am ron okay?</h1></center>
+<center class="unicorn" style="font-size:400%;">am cookie and am ron okay?</center>
 
 <script>
         var step = 4, // colorChage step, use negative value to change direction
