--- a/index.html
+++ b/index.html
@@ -8,52 +8,11 @@
 <body>
   
 
-<style>
-  
-center{
-  color:rgba(100, 50, 255, .8);
-  font-size: 500%;
-}
-.rainbow {
-   /* Chrome, Safari, Opera */
-  -webkit-animation: rainbow 1s infinite; 
-  
-  /* Internet Explorer */
-  -ms-animation: rainbow 1s infinite;
-  
-  /* Standar Syntax */
-  animation: rainbow 1s infinite; 
-}
-
-/* Chrome, Safari, Opera */
-@-webkit-keyframes rainbow{
-	20%{color: red;}
-	40%{color: yellow;}
-	60%{color: green;}
-	80%{color: blue;}
-	100%{color: orange;}	
-}
-/* Internet Explorer */
-@-ms-keyframes rainbow{
-	20%{color: red;}
-	40%{color: yellow;}
-	60%{color: green;}
-	80%{color: blue;}
-	100%{color: orange;}	
-}
-
-/* Standar Syntax */
-@keyframes rainbow{
-	20%{color: red;}
-	40%{color: yellow;}
-	60%{color: green;}
-	80%{color: blue;}
-	100%{color: orange;}	
-}
-
-  </style>
+<style src="./rainbow.css"> </style>
 
 <center class="rainbow"> Hi there, I'm Ron! </center>
-            <div style="height:10%; position:absolute; bottom:0px;"><a href="https://codepen.io/srm4nu/pen/OVXXmj">This helped me!</a></div>
+            <div style="height:10%; position:absolute; bottom:0px;">
+					<a href="https://commanderg.github.io">another dank meme that forked my dank meme</a></div>
+				<a href="https://codepen.io/srm4nu/pen/OVXXmj">This helped me!</a></div>
         </body>
             </html>
