get rid of jquery and try to fix this

--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 
 <html>
 <head>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 <meta charset=utf-8 />
 <title>RONTheCookie.me</title>
 </head>
 <body>
   
 
-<style src="./rainbow.css"> </style>
+<style src="https://ronthecookie.me/rainbow.css"> </style>
 
 <center class="rainbow"> Hi there, I'm Ron! </center>
             <div style="height:10%; position:absolute; bottom:0px;">
