realise dumb mistake

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   
 
-<style src="https://ronthecookie.me/rainbow.css"> </style>
+<link rel="stylesheet" type="text/css" href="rainbow.css" >
 
 <center class="rainbow"> Hi there, I'm Ron! </center>
             <div style="height:10%; position:absolute; bottom:0px;">
