black bg + css file rename

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   
 
-<link rel="stylesheet" type="text/css" href="rainbow.css" >
+<link rel="stylesheet" type="text/css" href="main.css" >
 
 <center class="rainbow"> Hi there, I'm Ron! </center>
             <div style="height:10%; position:absolute; bottom:0px;">
