bad way of fixing this, but it works!

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
 <center class="rainbow"> Hi there, I'm Ron! </center>
             <div style="height:10%; position:absolute; bottom:0px;">
-					<a href="https://commanderg.github.io">another dank meme that forked my dank meme</a></div>
-				<a href="https://codepen.io/srm4nu/pen/OVXXmj">This helped me!</a></div>
+					<a href="https://commanderg.github.io">another dank meme that forked my dank meme</a>
+				</div>
+				
+				<div style="height:15%; position:absolute; bottom:0px;">
+						<a href="https://codepen.io/srm4nu/pen/OVXXmj">This helped me!</a>
+					</div>
         </body>
             </html>
