--- a/isadankmeme.html
+++ b/isadankmeme.html
@@ -1,3 +1,3 @@
-<title>RONTheCookie.me</title>
+<title>MODKILLER1001.github.io</title>
 <link rel="stylesheet" type="text/css" href="main.css" >
 <center><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><input type="text"> <div class="dankmeme">is a dank meme!</div><center>
