--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 
 <link rel="stylesheet" type="text/css" href="main.css" >
 
-<center class="rainbow"> Hi there, I'm Ron! </center>
-            <div style="height:10%; position:absolute; bottom:0px;">
+<center class="rainbow"> Hi there, I'm MOD! </center>
+            <div style="height:15%; position:absolute; bottom:0px;">
 					<a href="https://commanderg.github.io">another dank meme that forked my dank meme</a>
 				</div>
 				
-				<div style="height:15%; position:absolute; bottom:0px;">
+				<div style="height:20%; position:absolute; bottom:0px;">
 						<a href="https://codepen.io/srm4nu/pen/OVXXmj">This helped me!</a>
 					</div>
+	<div style="height:15%; position:absolute; bottom:0px;">
+						<a href="https://goo.gl/QioZTh">This was also a huge help!</a>
+				</div>
+	<div style="height:10%; position:absolute; bottom:0px;">
+						<a href="ronthecookie.me">Forked off ronthecookie</a>
+				</div>
         </body>
             </html>
