--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<a href="https://goo.gl/QioZTh">This was also a huge help!</a>
 				</div>
 	<div style="height:5%; position:absolute; bottom:0px;">
-						<a href="ronthecookie.me">Forked off ronthecookie</a>
+						<a href="https://ronthecookie.me">Forked off ronthecookie</a>
 				</div>
         </body>
             </html>
