--- a/isadankmeme.html
+++ b/isadankmeme.html
@@ -1,3 +1,6 @@
 <title>MODKILLER1001.github.io</title>
 <link rel="stylesheet" type="text/css" href="main.css" >
 <center><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><input type="text"> <div class="dankmeme">is a dank meme!</div><center>
+<div class="wizardmeme">
+    <a href="isadankmeme.html"><img src="wizardmeme.jpg" width="150" height="171" title="YOUR A WIZARD" alt="WIZARD"</a>
+            </div>
